compiler/actonc/test/syntaxerrors/err37.act
# Binary literal error
def bad_binary():
    return 0b102